--- a/requirements.txt
+++ b/requirements.txt
@@ -56,6 +56,7 @@ jupyterlab==4.1.5
 jupyterlab-pygments==0.3.0
 jupyterlab-server==2.25.4
 jupyterlab-widgets==3.0.10
+Levenshtein==0.25.0
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.6
 mistune==3.0.2
@@ -110,6 +111,7 @@ PyYAML==6.0.1
 pyzmq==25.1.2
 qtconsole==5.5.1
 QtPy==2.4.1
+rapidfuzz==3.7.0
 referencing==0.34.0
 regex==2023.12.25
 requests==2.31.0
