--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 accelerate==0.28.0
 aiohttp==3.9.3
 aiosignal==1.3.1
+annotated-types==0.6.0
 anyio==4.3.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -15,12 +16,14 @@ bleach==6.1.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
 comm==0.2.2
 datasets==2.18.0
 debugpy==1.8.1
 decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.8
+distro==1.9.0
 evaluate==0.4.1
 exceptiongroup==1.2.0
 executing==2.0.1
@@ -83,6 +86,7 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.4.99
 nvidia-nvtx-cu12==12.1.105
+openai==1.16.1
 overrides==7.7.0
 packaging==24.0
 pandas==2.0.3
@@ -101,6 +105,8 @@ pure-eval==0.2.2
 pyarrow==15.0.1
 pyarrow-hotfix==0.6
 pycparser==2.21
+pydantic==2.6.4
+pydantic-core==2.16.3
 pygments==2.17.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -130,6 +136,7 @@ stack-data==0.6.3
 sympy==1.12
 terminado==0.18.1
 threadpoolctl==3.4.0
+tiktoken==0.6.0
 tinycss2==1.2.1
 tokenizers==0.15.2
 tomli==2.0.1
