--- a/requirements.txt
+++ b/requirements.txt
@@ -60,6 +60,7 @@ jupyterlab-pygments==0.3.0
 jupyterlab-server==2.25.4
 jupyterlab-widgets==3.0.10
 Levenshtein==0.25.0
+llm2vec==0.1.2
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.6
 mistune==3.0.2
@@ -92,6 +93,7 @@ packaging==24.0
 pandas==2.0.3
 pandocfilters==1.5.1
 parso==0.8.3
+peft==0.10.0
 pexpect==4.9.0
 pickleshare==0.7.5
 pkgutil-resolve-name==1.3.10
