--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,14 @@ Babel==2.14.0
 backcall==0.2.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
+catboost==1.2.3
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 comm==0.2.2
+contourpy==1.1.1
+cycler==0.12.1
 datasets==2.18.0
 debugpy==1.8.1
 decorator==5.1.1
@@ -29,8 +32,10 @@ exceptiongroup==1.2.0
 executing==2.0.1
 fastjsonschema==2.19.1
 filelock==3.13.1
+fonttools==4.51.0
 frozenlist==1.4.1
 fsspec==2024.2.0
+graphviz==0.20.3
 h11==0.14.0
 httpcore==1.0.4
 httpx==0.27.0
@@ -59,9 +64,11 @@ jupyterlab==4.1.5
 jupyterlab-pygments==0.3.0
 jupyterlab-server==2.25.4
 jupyterlab-widgets==3.0.10
+kiwisolver==1.4.5
 Levenshtein==0.25.0
 llm2vec==0.1.2
 MarkupSafe==2.1.5
+matplotlib==3.7.5
 matplotlib-inline==0.1.6
 mistune==3.0.2
 mpmath==1.3.0
@@ -96,8 +103,10 @@ parso==0.8.3
 peft==0.10.0
 pexpect==4.9.0
 pickleshare==0.7.5
+pillow==10.3.0
 pkgutil-resolve-name==1.3.10
 platformdirs==4.2.0
+plotly==5.20.0
 progressbar2==4.4.2
 prometheus-client==0.20.0
 prompt-toolkit==3.0.43
@@ -110,6 +119,7 @@ pycparser==2.21
 pydantic==2.6.4
 pydantic-core==2.16.3
 pygments==2.17.2
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==2.0.7
@@ -136,6 +146,7 @@ sniffio==1.3.1
 soupsieve==2.5
 stack-data==0.6.3
 sympy==1.12
+tenacity==8.2.3
 terminado==0.18.1
 threadpoolctl==3.4.0
 tiktoken==0.6.0
